# PayCheck

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/design/: 2026-06-01-paycheck-modular-refactoring-design.md
docs/superpowers/plans/: 2026-06-05-paycheck-react-report.md
docs/superpowers/specs/: 2026-06-01-income-details-interaction.md  2026-06-05-paycheck-react-report-design.md
paycheck-react/: index.html  package-lock.json  package.json
paycheck-react/src/: App.css  App.tsx  constants.ts  main.tsx  types.ts
paycheck-react/src/components/: CategorySection.tsx  DetailTable.tsx  EmptyState.tsx  Footer.tsx  InternalSection.tsx  MonthlyChart.tsx  MonthlyTable.tsx  PlatformCards.tsx  PlatformComparison.tsx  ReportHeader.tsx  SummaryCards.tsx
paycheck-react/src/components/common/: Pagination.tsx  TagSelect.tsx
paycheck-react/src/hooks/: useAggregation.ts  useFilteredList.ts  useFingerprints.ts
paycheck-react/src/styles/: cards.css  charts.css  filters.css  internal.css  tables.css
paycheck-react/src/utils/: aggregation.ts  format.ts  hash.ts
paycheck-tools/paycheck/: __main__.py
paycheck-tools/paycheck/analysis/: stats.py
paycheck-tools/paycheck/ocr/: pipeline.py
paycheck-tools/paycheck/ocr/layouts/: __init__.py  base.py
paycheck-tools/paycheck/report/: html_reporter.py
src/paycheck/: __main__.py
src/paycheck/analysis/: filters.py  stats.py
src/paycheck/core/: log.py  models.py  tag_expr.py
src/paycheck/gui/: main_window.py  tag_builder.py  tag_dialog.py
src/paycheck/ingest/: csv_utils.py  scanner.py
src/paycheck/ingest/parsers/: __init__.py  alipay.py  boc.py  wechat.py
src/paycheck/ocr/: engine.py  pdf_render.py  pipeline.py
src/paycheck/ocr/layouts/: __init__.py  base.py  boc.py
src/paycheck/report/: html_reporter.py  template.html
src/paycheck/storage/: database.py
