[project]
name = "paycheck"
version = "0.2.0"
description = "个人账单统计工具"
requires-python = ">=3.10, <3.14"
dependencies = [
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1",
    "paddleocr>=3.6.0",
    "paddlepaddle>=3.3.1",
    "Pillow>=10",
    "PyMuPDF>=1.24",
]

[project.scripts]
paycheck = "paycheck.__main__:cli"

[tool.uv]
package = true
