[project]
name = "paycheck"
version = "0.2.0"
description = "个人账单统计工具"
requires-python = ">=3.10, <3.12"
dependencies = [
    "opencv-python",
    "openpyxl",
    "paddleocr>=3.6.0",
    "paddlepaddle-gpu",
    "Pillow",
    "PyMuPDF",
    "torch",
]

[project.scripts]
paycheck = "paycheck.__main__:cli"

[tool.uv]
package = true

[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.setuptools.package-data]
paycheck = ["report/template.html"]

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle" }
torch = { index = "pytorch" }
