[project]
name = "paycheck"
version = "0.5.0"
description = "个人账单统计工具"
requires-python = ">=3.10, <3.14"
dependencies = [
    "opencv-python",
    "openpyxl",
    "paddleocr",
    "paddlepaddle-gpu",
    "Pillow",
    "PyMuPDF",
    "pyside6",
    "torch",
    "tqdm",
]

[project.scripts]
paycheck = "paycheck.__main__:main"

[tool.uv]
package = true

[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle" }
torch = { index = "pytorch" }
